kubernetes/apps/apps/trek/trek/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trek
  labels:
    app: trek
spec:
  type: ClusterIP
  selector:
    app: trek
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
